Add Views Of Admin

--- a/Test after service/Views/Account/Login.cshtml
+++ b/Test after service/Views/Account/Login.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ITI_Hackathon.Models.Account.LoginViewModel
 @{
     ViewData["Title"] = "Login";
-    Layout = null; // No layout for auth page
+    Layout = "~/Views/Shared/_DashboardLayout.cshtml";
+    // Layout = null;
 }
 
 <!DOCTYPE html>
