Solve Error In Pending View

--- a/Test after service/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/Test after service/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model ITI_Hackathon.Models.Account.ResetPasswordViewModel
+﻿@* @model ITI_Hackathon.Models.Account.ResetPasswordViewModel
 @{
     Layout = null; // Use layout if you want navbar/footer, or keep null for standalone page
 }
@@ -65,4 +65,4 @@
         </div>
     </div>
 </body>
-</html>
+</html> *@
