--- a/Test after service/Views/Shared/_LoginPartial.cshtml
+++ b/Test after service/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using ITI_Hackathon.Entities
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
